Update OneTriage marketing website with new assets and configurations

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
+    <link rel="icon" type="image/png" sizes="32x32" href="/ic_launcher.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/ic_launcher.png" />
+    <link rel="apple-touch-icon" href="/ic_launcher.png" />
+    <link rel="shortcut icon" type="image/png" href="/ic_launcher.png?v=3" />
     <link rel="canonical" href="https://onetriage.com" />
     <meta property="og:title" content="OneTriage">
   <meta name="twitter:title" content="OneTriage">
